--- a/Lab01/00_examples/docker-compose03.yml
+++ b/Lab01/00_examples/docker-compose03.yml
@@ -12,7 +12,7 @@ services:
     depends_on:
       - mongo   
   mongo:
-    image: mongo
+    image: mongo:4.4.12-rc1-focal
     restart: always
     ports:
       - 27017:27017
