--- a/Lab06/5_heartbeat/demo03.yaml
+++ b/Lab06/5_heartbeat/demo03.yaml
@@ -47,6 +47,15 @@ spec:
              timeoutSeconds: 10
              successThreshold: 1
              failureThreshold: 3
+          livenessProbe:
+             httpGet:
+               path: /actuator/health
+               port: 8080
+             initialDelaySeconds: 50
+             periodSeconds: 10
+             timeoutSeconds: 10
+             successThreshold: 1
+             failureThreshold: 3
           # livenessProbe:
           #   exec:
           #     command:
@@ -59,8 +68,8 @@ spec:
           #   timeoutSeconds: 1             
           resources:
             limits:
-              cpu: 500m
-              memory: 256Mi
+              cpu: 100m
+              memory: 128Mi
             requests:
               cpu: 100m
               memory: 128Mi
