--- a/Lab06/6_hpa/hpa01.yaml
+++ b/Lab06/6_hpa/hpa01.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: lab06apictacte
+    name: lab06apictactebus
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 50
